# hyoka

./: Cargo.toml  build.rs
protocols/: cursor-shape-v1.xml  tablet-v2.xml  wlr-layer-shell-unstable-v1.xml
src/: consumer.rs  main.rs  mapping.rs  modules.rs  program.rs  shell.rs  sync.rs  wayland.rs
src/consumer/: program.rs  programs.rs  window.rs
src/consumer/programs/: bar.rs  tooltip.rs
src/modules/: battery.rs  clock.rs  dbus.rs  hyprland.rs  polling.rs  uevent.rs
src/modules/dbus/: cookie.rs
tiny-skia/: Cargo.toml
