[package]
name = "hyoka"
version.workspace = true
edition.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2024"

[dependencies]
compio = { version = "0.17.0", default-features = false, features = [
  "io-uring",
  "nightly",
  "runtime"
] }
concat-idents = "1.1.5"
iced = { git = "https://github.com/uriib/iced", default-features = false, features = [
  "advanced",
  "canvas",
  "svg",
  "thread-pool",
  "tiny-skia",
  "wayland",
] }
iced_core = { git = "https://github.com/uriib/iced", default-features = false }
iced_runtime = { git = "https://github.com/uriib/iced", default-features = false }
iced_tiny_skia = { git = "https://github.com/uriib/iced", default-features = false }
resvg = { version = "0.45.1", default-features = false }
rustc-hash = "2.1.1"
rustix = { version = "1.1.3", features = ["mm"] }
tiny-skia = { version = "0.11.4", default-features = false }

[build-dependencies]
bindgen = { version = "0.72.1", features = [] }
cc = { version = "1.2.51", features = ["parallel"] }
