[package]
name = "hyoka"
version.workspace = true
edition.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = { version = "0.8.12", default-features = false }
bytes = { version = "1.11.0", default-features = false }
compio = { version = "0.17.0", default-features = false, features = [
  "io-uring",
  "nightly",
  "runtime"
] }
concat-idents = "1.1.5"
cosmic-freedesktop-icons = { git = "https://github.com/pop-os/freedesktop-icons" }
iced = { git = "https://github.com/uriib/iced", default-features = false, features = [
  "advanced",
  "canvas",
  "svg",
  "thread-pool",
  "image-without-codecs",
  "tiny-skia",
  "wayland",
] }
iced_core = { git = "https://github.com/uriib/iced", default-features = false }
iced_runtime = { git = "https://github.com/uriib/iced", default-features = false }
iced_tiny_skia = { git = "https://github.com/uriib/iced", default-features = false }
log = "0.4.29"
lru = { version = "0.16.3", default-features = false }
png = { version = "0.18.0", default-features = false }
resvg = { version = "0.45.1", default-features = false }
rustc-hash = "2.1.1"
rustix = { version = "1.1.3", features = ["mm"] }
smallstr = "0.3.1"
tiny-skia = { version = "0.11.4", default-features = false }
tokio = { version = "1.49.0", features = ["sync"] }

[build-dependencies]
bindgen = { version = "0.72.1", features = [] }
cc = { version = "1.2.51", features = ["parallel"] }
