[package]
name = "hyoka"
version.workspace = true
edition.workspace = true

[workspace.package]
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = { version = "0.8.12", default-features = false }
arrayvec = "0.7.6"
bytes = { version = "1.11.0", default-features = false }
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
compio = { version = "0.17.0", default-features = false, features = [
  "io-uring",
  "nightly",
  "runtime",
  "time"
] }
concat-idents = "1.1.5"
cosmic-freedesktop-icons = { git = "https://github.com/pop-os/freedesktop-icons" }
derive-where = "1.6.0"
futures = { version = "0.3.31", features = ["unstable"] }
iced = { git = "https://github.com/uriib/iced", default-features = false, features = [
  "image-without-codecs",
  "svg",
  "thread-pool",
  "tiny-skia",
  "wayland",
] }
iced_core = { git = "https://github.com/uriib/iced", default-features = false }
iced_program = { git = "https://github.com/uriib/iced", default-features = false }
iced_runtime = { git = "https://github.com/uriib/iced", default-features = false }
iced_tiny_skia = { git = "https://github.com/uriib/iced", default-features = false }
log = "0.4.29"
lru = { version = "0.16.3", default-features = false }
png = { version = "0.18.0", default-features = false }
roxmltree = { version = "0.21.1", default-features = false }
rustc-hash = "2.1.1"
rustix = { version = "1.1.3", features = ["mm"] }
smallstr = "0.3.1"
tiny-skia = { version = "0.11.4", default-features = false }
usvg = { version = "0.46.0", default-features = false }

[build-dependencies]
bindgen = { version = "0.72.1", features = [] }
cc = { version = "1.2.51", features = ["parallel"] }
